        two sets of sequences.
      \item
      \code{seqLRT()} LRT for comparing two sets of sequences.
      \item
      \code{seqBIC()} BIC for comparing sequence data.
    }
  }
  
  \subsection{Changes in existing functions}{
    \itemize{
      \item{seqgranularity()} two new methods \code{"first.valid"} and \code{"last.valid"} for sequences with missing values.
    }
  } 
  \subsection{Bug fixes}{
    \itemize{
      \item
      \code{seqgranularity()} did not return a proper \code{stslist} object when \code{method="mostfreq"}.
    }
  }

}

\section{Changes in version 0.4.7 [2020-03-02]}{
  \subsection{Bug fixes}{
    \itemize{
      \item
      \code{seqedplot()}: issue with color selection when only one event.
      \item
      \code{seqedplot()}: Now calls \code{plot.survfit} with by default
        \code{conf.int=FALSE} instead of \code{"none"} (advised by Terry Therneau).
    }
  }
  \subsection{Misc.}{
    \itemize{
      \item
      \code{seqprecarity(), seqprecorr(), seqprecstart()} deleted. These functions are now in TraMineR since v 2.0-13.
    }
  }
}

\section{Changes in version 0.4.6 [2019-09-06]}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item
      \code{seqedplot()}: argument \code{title} is deprecated, use \code{main} instead.
      \item
      \code{seqedplot()}: when \code{type = 'survival'}, now supports the \code{conf.int} argument of \code{plot.survfit} to control the display of confidence intervals.
    }
  }

  \subsection{Bug fixes}{
    \itemize{
      \item
      \code{seqedplot()}: An issue with the joint use of the \code{xmax} and \code{xlim} arguments when calling \code{plot.survfit} raised a warning since \code{Survival} v3.0.
    }
  }
}


\section{Changes in version 0.4.5 [2019-05-06]}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item
      \code{seqprecarity()} and \code{seqprecstart()} gain an argument \code{with.missing}.
      \item