@@ -18,11 +18,13 @@
     \itemize{
       \item{seqgranularity()} two new methods \code{"first.valid"} and \code{"last.valid"} for sequences with missing values.
     }
-  } 
+  }
   \subsection{Bug fixes}{
     \itemize{
       \item
       \code{seqgranularity()} did not return a proper \code{stslist} object when \code{method="mostfreq"}.
+      \item
+      \code{seqemlt()} issue resulting from fix of "[stslist" in TraMineR.
     }
   }
 
